# Qt_Model_Starter

./: CMakeLists.txt  ScreenA.cpp  ScreenA.h  main.cpp  main.qml  screenA.qml  screenB.qml  sequence.md
